--- a/authentication/signup/signup.html
+++ b/authentication/signup/signup.html
@@ -156,14 +156,14 @@
                 <label for="department">Department</label>
                 <select id="department" name="department" required>
                     <option value="">Select Department</option>
-                    <option value="Computer Science">Information and Communication Engineering (ICE)
+                    <option value="Information and Communication Engineering (ICE)">Information and Communication Engineering (ICE)
                     </option>
-                    <option value="Electrical Engineering">Electrical and Electronics Engineering (EEE)
+                    <option value="Electrical and Electronics Engineering (EEE)">Electrical and Electronics Engineering (EEE)
                     </option>
-                    <option value="Mechanical Engineering">Material Science and Engineering (ME)</option>
-                    <option value="Mathematics">Computer Science and Engineering (CSE)</option>
-                    <option value="Business">Applied Chemistry and Chemical Engineering (ACCE)</option>
-                    <option value="Literature">Pharmacy</option>
+                    <option value="Material Science and Engineering (ME)">Material Science and Engineering (ME)</option>
+                    <option value="Computer Science and Engineering (CSE)">Computer Science and Engineering (CSE)</option>
+                    <option value="Applied Chemistry and Chemical Engineering (ACCE)">Applied Chemistry and Chemical Engineering (ACCE)</option>
+                    <option value="Pharmacy">Pharmacy</option>
                     <option value="Other">Other</option>
                 </select>
             </div>
@@ -171,13 +171,13 @@
                 <label for="year">Session</label>
                 <select id="year" name="year" required>
                     <option value="">Select Session</option>
-                    <option value="1st Year">2017-18</option>
-                    <option value="2nd Year">2018-19</option>
-                    <option value="3rd Year">2019-20</option>
-                    <option value="3rd Year">2020-21</option>
-                    <option value="3rd Year">2021-22</option>
-                    <option value="4th Year">2022-23</option>
-                    <option value="4th Year">2023-24</option>
+                    <option value="2017-18">2017-18</option>
+                    <option value="2018-19">2018-19</option>
+                    <option value="2019-20">2019-20</option>
+                    <option value="2020-21">2020-21</option>
+                    <option value="2021-22">2021-22</option>
+                    <option value="2022-23">2022-23</option>
+                    <option value="2023-24">2023-24</option>
                     <option value="Graduate">Graduate</option>
                     <option value="Faculty">Faculty</option>
                 </select>
