--- a/authentication/login/login.html
+++ b/authentication/login/login.html
@@ -328,14 +328,14 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
-            const loginForm = document.getElementById('loginForm'); // Make sure your form has this ID
+            const loginForm = document.getElementById('loginForm'); 
 
             if (loginForm) {
                 loginForm.addEventListener('submit', async (e) => {
                     e.preventDefault();
 
-                    const email = document.getElementById('email').value; // Make sure input has id="email"
-                    const password = document.getElementById('password').value; // Make sure input has id="password"
+                    const email = document.getElementById('email').value; 
+                    const password = document.getElementById('password').value; 
 
                     try {
                         const response = await fetch('/api/auth/login', {
